--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- PANTALLA PRINCIPAL -->
     <div id="main" class="screen">
-        <img src="imagenes/inicio.jpeg" alt="inicio">
+        <img src="imagenes/inicio.jpeg">
         <h1>¿Quieres ser mi San Valentín? 💘</h1>
         <br>
         <button id="yesBtn">Sí 💖</button>
@@ -104,10 +104,10 @@
 
     <!-- PANTALLA FINAL -->
    <div id="final" class="screen">
-        <img src="imagenes/fin.jpeg" alt="final">
+        <img src="imagenes/fin.jpeg">
         <h1>Sabía que dirías que sí 🥰❤️</h1>
-        <p>Te amo🥰❤️</p>
-                <p>Nos vemos el sabado para el picnic ponte hermosa como siempre mi amor ❤️</p>
+        <p>Te amo bonita🥰❤️</p>
+        <p>Nos vemos el sabado para el picnic, ponte hermosa como siempre mi amor ❤️</p>
 
     </div>
 
@@ -168,4 +168,5 @@
 
 </body>
 </html>
+
 
