--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- PANTALLA PRINCIPAL -->
     <div id="main" class="screen">
-        <img src="imagenes/inicio.jpeg">
+        <img src="img/inicio.jpeg">
         <h1>¿Quieres ser mi San Valentín? 💘</h1>
         <br>
         <button id="yesBtn">Sí 💖</button>
@@ -104,7 +104,7 @@
 
     <!-- PANTALLA FINAL -->
    <div id="final" class="screen">
-        <img src="imagenes/fin.jpeg">
+        <img src="img/fin.jpeg">
         <h1>Sabía que dirías que sí 🥰❤️</h1>
         <p>Te amo bonita🥰❤️</p>
         <p>Nos vemos el sabado para el picnic, ponte hermosa como siempre mi amor ❤️</p>
@@ -168,5 +168,6 @@
 
 </body>
 </html>
+
 
 
