--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- PANTALLA PRINCIPAL -->
     <div id="main" class="screen">
-        <img src="Img/inicio.jpeg">
+        <img src="Img/iniciocen.jpeg">
         <h1>¿Quieres ser mi San Valentín? 💘</h1>
         <br>
         <button id="yesBtn">Sí 💖</button>
@@ -168,6 +168,7 @@
 
 </body>
 </html>
+
 
 
 
