--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ button {
 
 <!-- PANTALLA PRINCIPAL -->
 <div id="main" class="screen">
-    <img src="img/iniciocen.jpeg">
+    <img src="Img/iniciocen.jpeg">
     <h1>¿Quieres ser mi San Valentín? 💘</h1>
     <br>
     <button id="yesBtn">Sí 💖</button>
@@ -167,7 +167,7 @@ button {
 
 <!-- PANTALLA FINAL -->
 <div id="final" class="screen">
-    <img src="img/fin.jpeg">
+    <img src="Img/fin.jpeg">
 
     <h1>Sabía que dirías que sí 🥰❤️</h1>
 
@@ -315,3 +315,4 @@ yesBtn.addEventListener("click",()=>{
 
 </body>
 </html>
+
