--- a/index.html
+++ b/index.html
@@ -216,13 +216,16 @@ const music = document.getElementById("music");
 
 /* BOTÓN NO */
 const palabrasNo = [
-    "No 🙅‍♀️","¿Segura? 😏","Piénsalo bien 🤨",
-    "Intenta otra vez 😂","Error ❌","Imposible 😜",
-            "Por que no? 😑",
-            "Que te pasaaaaaa? 🧐",
-            "No puedes decir que no jajajajaja 😒",
-            "Ya dije que no puedes decir que no 😠",
-            "Dime que siiiiiii  😦"
+    "No 🙅‍♀️","¿Segura? 😏",
+    "Piénsalo bien 🤨",
+    "Intenta otra vez 😂",
+    "Error ❌",
+    "Imposible 😜",
+    "Por que no? 😑",
+    "Que te pasaaaaaa? 🧐",
+    "No puedes decir que no jajajajaja 😒",
+    "Ya dije que no puedes decir que no 😠",
+    "Dime que siiiiiii  😦"
 ];
 let indexPalabra = 0;
 
@@ -320,5 +323,6 @@ yesBtn.addEventListener("click",()=>{
 
 </body>
 </html>
+
 
 
